[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["abdalazez <abdalazzezzalsalahat@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.2"
pytest = "^6.2.4"
flake8 = "^3.9.2"
Corpus = "^0.4.2"
english-words = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
